cmake_minimum_required(VERSION 3.5.0)

project(c_cpp_examples)

add_subdirectory("utilities")
add_subdirectory("impl")
add_subdirectory("thread")
add_subdirectory("thread syncronization")
add_subdirectory("class template")
add_subdirectory("extern C")
add_subdirectory("operator overloading")
# add_subdirectory("pretty std::cout")
add_subdirectory("smart pointer")
add_subdirectory("uniform initialization")