cmake_minimum_required(VERSION 3.5.0)

set(CMAKE_CXX_STANDARD 17)

project("algorithm-1")

add_executable(${PROJECT_NAME}_stack_1 stack-1.cpp)
add_executable(${PROJECT_NAME}_stack_2 stack-2.cpp)
add_executable(${PROJECT_NAME}_reverse_word_1 reverse_word-1.cpp)
add_executable(${PROJECT_NAME}_parenthesis_string_1 parenthesis_string-1.cpp)
add_executable(${PROJECT_NAME}_editor_1 editor-1.cpp)
add_executable(${PROJECT_NAME}_editor_2 editor-2.cpp)
add_executable(${PROJECT_NAME}_josephus_1 josephus-1.cpp)